@@ -9,17 +9,25 @@ class Messages extends CActiveRecord
 		return parent::model($className);
 	}
 
-  public function tableName()
-  {
-    if (isset(Yii::app()->controller->module->messagesTable))
-      $this->_tableName = Yii::app()->controller->module->messagesTable;
-    elseif (isset(Yii::app()->modules['user']['messagesTable'])) 
-      $this->_tableName = Yii::app()->modules['user']['messagesTable'];
-    else
-      $this->_tableName = 'messages'; // fallback if nothing is set
+	/**
+	 * Returns resolved table name (incl. table prefix when it is set in db configuration)
+	 * Following algorith of searching valid table name is implemented:
+	 *  - try to find out table name stored in currently used module
+	 *  - if not found try to get table name from UserModule configuration
+	 *  - if not found user default {{message}} table name
+	 * @return string
+	 */
+  	public function tableName()
+  	{
+    	if (isset(Yii::app()->controller->module->messagesTable))
+      		$this->_tableName = Yii::app()->controller->module->messagesTable;
+    	elseif (isset(Yii::app()->modules['user']['messagesTable'])) 
+      		$this->_tableName = Yii::app()->modules['user']['messagesTable'];
+    	else
+      		$this->_tableName = '{{messages}}'; // fallback if nothing is set
 
-		return $this->_tableName;
-  }
+		return YumHelper::resolveTableName($this->_tableName,$this->getDbConnection());
+  	}
 
 	public function rules()
 	{
